--- a/index.html
+++ b/index.html
@@ -17,23 +17,27 @@
             margin: 0;
         }
 
-        .container {
+        .session {
             background-color: #ffffff; /* White background */
             padding: 30px; /* Increased padding */
             border-radius: 10px; /* Softer rounded corners */
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2); /* Shadow for container */
             width: 100%;
             max-width: 400px; /* Max width */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
-        h1 {
+        h4 {
             text-align: center;
             margin-bottom: 20px;
             color: #333; /* Dark text for contrast */
         }
 
-        .input-group {
+        .floating-label {
             margin-bottom: 20px; 
+            position: relative; /* Positioning for label */
         }
 
         label {
@@ -41,6 +45,10 @@
             margin-bottom: 5px;
             font-size: 14px; 
             color: #666; 
+            position: absolute;
+            left: 10px;
+            top: 12px;
+            transition: 0.2s;
         }
 
         input {
@@ -49,6 +57,8 @@
             border: 1px solid #ced4da; 
             border-radius: 5px; 
             transition: border-color 0.3s; 
+            position: relative;
+            padding-left: 40px; /* Space for icons */
         }
 
         input:focus {
@@ -75,6 +85,14 @@
 
         button:active {
             transform: translateY(0); 
+        }
+
+        .icon {
+            position: absolute;
+            top: 12px;
+            left: 10px;
+            height: 30px; /* Adjust height for alignment */
+            width: 30px; /* Adjust width for alignment */
         }
 
         /* Notification container */
@@ -118,18 +136,51 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Login</h1>
-        <form id="loginForm">
-            <div class="input-group">
+    <div class="session">
+        <div class="left">
+            <svg enable-background="new 0 0 300 302.5" version="1.1" viewBox="0 0 300 302.5" xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
+                <style type="text/css">
+                    .st01{fill:#fff;}
+                </style>
+                <path class="st01" d="m126 302.2c-2.3 0.7-5.7 0.2-7.7-1.2l-105-71.6c-2-1.3-3.7-4.4-3.9-6.7l-9.4-126.7c-0.2-2.4 1.1-5.6 2.8-7.2l93.2-86.4c1.7-1.6 5.1-2.6 7.4-2.3l125.6 18.9c2.3 0.4 5.2 2.3 6.4 4.4l63.5 110.1c1.2 2 1.4 5.5 0.6 7.7l-46.4 118.3c-0.9 2.2-3.4 4.6-5.7 5.3l-121.4 37.4zm63.4-102.7c2.3-0.7 4.8-3.1 5.7-5.3l19.9-50.8c0.9-2.2 0.6-5.7-0.6-7.7l-27.3-47.3c-1.2-2-4.1-4-6.4-4.4l-53.9-8c-2.3-0.4-5.7 0.7-7.4 2.3l-40 37.1c-1.7 1.6-3 4.9-2.8 7.2l4.1 54.4c0.2 2.4 1.9 5.4 3.9 6.7l45.1 30.8c2 1.3 5.4 1.9 7.7 1.2l52-16.2z"/>
+            </svg>
+        </div>
+        <form id="loginForm" class="log-in" autocomplete="off"> 
+            <h4>We are my in <span>MyWebsite</span></h4>
+            <p>Welcome back! Log in to your account to view today's clients:</p>
+            <div class="floating-label">
+                <input placeholder="Email" type="email" name="email" id="email" required autocomplete="off">
                 <label for="email">Email:</label>
-                <input type="email" id="email" required>
+                <div class="icon">
+                    <svg enable-background="new 0 0 100 100" version="1.1" viewBox="0 0 100 100" xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
+                        <style type="text/css">
+                            .st0{fill:none;}
+                        </style>
+                        <g transform="translate(0 -952.36)">
+                            <path d="m17.5 977c-1.3 0-2.4 1.1-2.4 2.4v45.9c0 1.3 1.1 2.4 2.4 2.4h64.9c1.3 0 2.4-1.1 2.4-2.4v-45.9c0-1.3-1.1-2.4-2.4-2.4h-64.9zm2.4 4.8h60.2v1.2l-30.1 22-30.1-22v-1.2zm0 7l28.7 21c0.8 0.6 2 0.6 2.8 0l28.7-21v34.1h-60.2v-34.1z"/>
+                        </g>
+                        <rect class="st0" width="100" height="100"/>
+                    </svg>
+                </div>
             </div>
-            <div class="input-group">
+            <div class="floating-label">
+                <input placeholder="Password" type="password" name="password" id="password" required autocomplete="off">
                 <label for="password">Password:</label>
-                <input type="password" id="password" required>
+                <div class="icon">
+                    <svg enable-background="new 0 0 24 24" version="1.1" viewBox="0 0 24 24" xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
+                        <style type="text/css">
+                            .st0{fill:none;}
+                            .st1{fill:#010101;}
+                        </style>
+                        <rect class="st0" width="24" height="24"/>
+                        <path class="st1" d="M19,21H5V9h14V21z M6,20h12V10H6V20z"/>
+                        <path class="st1" d="M16.5,10h-1V7c0-1.9-1.6-3.5-3.5-3.5S8.5,5.1,8.5,7v3h-1V7c0-2.5,2-4.5,4.5-4.5s4.5,2,4.5,4.5V10z"/>
+                        <path class="st1" d="m12 16.5c-0.8 0-1.5-0.7-1.5-1.5s0.7-1.5 1.5-1.5 1.5 0.7 1.5 1.5-0.7 1.5-1.5 1.5zm0-2c-0.3 0-0.5 0.2-0.5 0.5s0.2 0.5 0.5 0.5 0.5-0.2 0.5-0.5-0.2-0.5-0.5-0.5z"/>
+                    </svg>
+                </div>
             </div>
-            <button type="submit">Login</button>
+            <button type="submit">Log in</button>
+            <a href="https://codepen.io/elujambio/pen/yjwzGP" class="discrete" target="_blank">Basic version</a>
         </form>
     </div>
 
@@ -143,7 +194,7 @@
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
         import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-auth.js";
-    
+
         // Your web app's Firebase configuration
         const firebaseConfig = {
             apiKey: "AIzaSyCsoet2YlQuE_VCn38JxSLEVTqPcJVoULk",
@@ -154,7 +205,7 @@
             appId: "1:683900610906:web:b4364a57332989b8166b63",
             measurementId: "G-PTTN3M405E"
         };
-    
+
         // Initialize Firebase
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
